<resources>
    <string name="app_name">Pet Walk</string>
    <!-- Strings used for authentication/login/forgot password -->
    <string name="accept">accept</string>
    <string name="account">Account</string>
    <string name="add_a_description">Add a description</string>
    <string name="add_a_new_meeting">Add a new meeting</string>
    <string name="add_button">Add</string>
    <string name="add_button_text">Add</string>
    <string name="added_success_message">Dog added successfully!</string>
    <string name="added_success_message_meeting">Meeting added successfully!</string>
    <string name="age">Age</string>
    <string name="age_hint">Age</string>
    <string name="already_registered_hint">Already have an account?</string>
    <string name="breed">Breed</string>
    <string name="breedHint">Breed</string>
    <string name="breed_hint">Breed</string>
    <string name="change">change</string>
    <string name="change_date">Change date</string>
    <string name="change_dog">Change dog</string>
    <string name="change_location">Change location</string>
    <string name="change_time">Change time</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="date">Date</string>
    <string name="decline">decline</string>
    <string name="delete">Delete</string>
    <string name="dog">Dog</string>
    <string name="dog_details">Details</string>
    <string name="dog_info">Dog Info</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="edit">Edit</string>
    <string name="edited_success_message">Dog edited successfully!</string>
    <string name="email_hint">Email</string>
    <string name="email_missing_message">Please add an email</string>
    <string name="err_camera_permission_needed">Please grant camera access</string>
    <string name="err_call_phone_permission_needed">Please grant phone access</string>
    <string name="female_gender">Female</string>
    <string name="filter_meetings">Filter meetings</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="forget_password_guid">We will send an email for you to reset your password</string>
    <string name="forgot_password_message">We have sent an email for you to reset your password</string>
    <string name="gender">Gender</string>
    <string name="gender_hint">Gender</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_added">Info has been added successfully </string>
    <string name="join">Join</string>
    <string name="leave_review">Leave review</string>
    <string name="login_button_text">Log in</string>
    <string name="login_text"><u>Log in</u></string>
    <string name="logout">Logout</string>
    <string name="male_gender">Male</string>
    <string name="man_walking_dog_content_description">Man walking dog image</string>
    <string name="meeting_info">Meeting Info</string>
    <string name="meetings">Meetings</string>
    <string name="name">Name</string>
    <string name="name_hint">Name</string>
    <string name="new_meeting">New meeting</string>
    <string name="no_internet_message">Please check your internet connection</string>
    <string name="or_text">or</string>
    <string name="password_does_not_match_message">The passwords do not match</string>
    <string name="password_hint">Password</string>
    <string name="password_missing_message">Please enter a password</string>
    <string name="password_short_message">The password is too short</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">Phone</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_dog">Pick a dog</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="pin_for_location">pin for location</string>
    <string name="profile_picture_string">Profile Picture</string>
    <string name="register_button_text">Register</string>
    <string name="register_text"><u>Register now</u></string>
    <string name="reset_password_button">Reset password</string>
    <string name="review_participants">Review participants</string>
    <string name="save">save</string>
    <string name="save_button_text">Save</string>
    <string name="search">Search</string>
    <string name="selectButton">Select</string>
    <string name="select_breed">Select Breed</string>
    <string name="select_dog">Select Dog</string>
    <string name="start_typing_a_breed_name">Start typing a breed name</string>
    <string name="start_typing_a_dog_name">Start typing a dog name</string>
    <string name="time">Time</string>
    <string name="title_activity_main8">Main8Activity</string>
    <string name="title_around_you">Around you</string>
    <string name="title_history">History</string>
    <string name="title_my_dogs">My Dogs</string>
    <string name="title_my_meetings">My Meetings</string>
    <string name="title_my_friends">My Friends</string>
    <string name="unknown_error">Unknown error</string>
    <string name="user_info">User Info</string>
    <string name="write_email_hint">Email address</string>
    <string name="wrong_email_format_message">Please add a valid email</string>
    <string name="you_attend_with">You attend with</string>
    <string name="you_attended_this_meeting_with">You attended this meeting with</string>
    <string name="you_have_no_dogs_yet">You have no dogs yet</string>
    <string name="predict_breed">Predict the breed</string>
    <string name="search_for_user">Search for user</string>
    <string name="friends_requests">Friend requests</string>
    <string name="you_have_no_friends_requests">You have no friend requests\n</string>
    <string name="you_have_no_friends_yet">You have no friends yet</string>
    <string name="no_events">Your friend has not events planned</string>
    <string name="city">City</string>
    <string name="select_city">Select city</string>
    <string name="start_typing_a_city_name">Start typing a city name</string>
    <string name="select_country">Select country</string>
    <string name="start_typing_a_country_name">Start typing a country name</string>
    <string name="start_typing_a_state_name">Start typing a state name</string>
    <string name="select_state">Select state</string>
    <string name="owner">Owner?</string>
    <string name="location">Location</string>
    <string name="edit_country">Edit country</string>
    <string name="edit_state">Edit state</string>
    <string name="edit_city">Edit city</string>
</resources>