<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_search_around"
        android:title="@string/title_around_you" />

    <item
        android:id="@+id/navigation_dogs"
        android:icon="@drawable/my_dog_icon"
        android:title="@string/title_my_dogs" />

    <item
        android:id="@+id/navigation_meetings"
        android:icon="@drawable/dog_walker_person_walk_pet_svgrepo_com"
        android:title="@string/title_my_meetings" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/my_meeting_icon"
        android:title="@string/title_my_friends" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

</menu>