<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.buzuriu.dogapp.views.main.ui.map.MapFragment"
        android:label="@string/title_around_you"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_dogs"
        android:name="com.buzuriu.dogapp.views.main.ui.my_dogs.MyDogsFragment"
        android:label="@string/title_my_dogs"
        tools:layout="@layout/fragment_my_dogs" />

    <fragment
        android:id="@+id/navigation_meetings"
        android:name="com.buzuriu.dogapp.views.main.ui.my_meetings.MyMeetingsFragment"
        android:label="@string/title_my_meetings"
        tools:layout="@layout/fragment_my_meetings" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.buzuriu.dogapp.views.main.ui.notifications.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>