<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.buzuriu.dogapp.viewModels.auth.RegisterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/register_fields_layout"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/rounded_button"
                    android:onClick="@{()->viewModel.registerClick()}"
                    android:text="@string/register_button_text"
                    android:textColor="#ffffff" />


                <ImageView
                    android:id="@+id/image"
                    android:layout_width="144dp"
                    android:layout_height="144dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_dog_walking" />

                <LinearLayout
                    android:id="@+id/register_fields_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:inputType="textPassword"
                        android:text="@={viewModel.name}" />

                    <EditText
                        android:id="@+id/edit_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_hint"
                        android:inputType="textPassword"
                        android:text="@={viewModel.phone}" />

                    <EditText
                        android:id="@+id/edit_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}" />

                    <EditText
                        android:id="@+id/edit_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />

                    <EditText
                        android:id="@+id/edit_confirm_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:text="@={viewModel.passwordRepeat}" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/already_registered_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_registered_hint"
                        android:textSize="@dimen/normal_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:onClick="@{()->viewModel.loginClick()}"
                        android:text="@string/login_text"
                        android:textColor="@color/dark_green"
                        android:textSize="@dimen/normal_size" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_overlay"
            android:orientation="vertical"
            android:visibility="gone">


            <ProgressBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>
</layout>
