<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.buzuriu.dogapp.viewModels.auth.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="144dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_launcher" />


                <EditText
                    android:id="@+id/login_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />


                <EditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/dark_green"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:onClick="@{()->viewModel.forgetPasswordClicked()}"
                    android:textSize="@dimen/normal_size" />

                <Button
                    android:background="@drawable/rounded_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="@{()->viewModel.loginClicked()}"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:text="@string/login_button_text"
                    android:textColor="@color/white" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/or_text"
                        android:textSize="@dimen/normal_size" />

                    <TextView
                        android:layout_marginTop="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:gravity="center_vertical"
                        android:text="@string/register_text"
                        android:textColor="@color/dark_green"
                        android:onClick="@{()->viewModel.registerClicked()}"
                        android:textSize="@dimen/normal_size" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_overlay"
            android:orientation="vertical"
            android:visibility="@{viewModel.isLoadingViewVisible ? View.VISIBLE : View.GONE }">

            <ProgressBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>
    </RelativeLayout>
</layout>