<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.buzuriu.dogapp.viewModels.DogDetailViewModel" />
    </data>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout1"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:padding="10dp"
                        android:id="@+id/dog_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:textSize="20sp" />

                    <TextView
                        android:padding="10dp"
                        android:id="@+id/dog_breed"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/breedHint"
                        android:textSize="20sp" />

                    <TextView
                        android:padding="10dp"
                        android:id="@+id/dog_age"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/age_hint"
                        android:textSize="20sp" />


                    <TextView
                        android:padding="10dp"
                        android:id="@+id/dog_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender_hint"
                        android:textSize="20sp" />


                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/addPetTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/profile_picture_string"
                        android:textSize="20dp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/dogProfileImage"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_below="@+id/addPetTextView"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_dog_svgrepo_com" />


                </RelativeLayout>

            </RelativeLayout>


        </ScrollView>

        <RelativeLayout

            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_overlay"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">


            <ProgressBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>



    </RelativeLayout>

</layout>