<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.buzuriu.dogapp.viewModels.AddMeetingViewModel" />
    </data>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/addButton"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout1">

                    <EditText
                        android:id="@+id/add_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_a_description"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pick_a_date"
                        />
                    <DatePicker
                        android:id="@+id/date_picker"
                        android:layout_width="match_parent"
                        android:datePickerMode="spinner"
                        android:calendarViewShown="false"
                        android:layout_weight="4"
                        android:layout_height="0dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pick_a_time"
                        />
                    <TimePicker
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:timePickerMode="spinner"

                        />



                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/dogProfileImage"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_below="@+id/addPetTextView"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_dog_walking_together" />

                    <TextView
                        android:id="@+id/addPetTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/new_meeting"
                        android:textSize="20dp" />



                </RelativeLayout>

            </RelativeLayout>


        </ScrollView>

        <RelativeLayout

            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_overlay"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">


            <ProgressBar
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>


        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:text="@string/add_button"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white" />

    </RelativeLayout>

</layout>